--- a/Web/Views/Account/AfterRegister.cshtml
+++ b/Web/Views/Account/AfterRegister.cshtml
@@ -5,7 +5,7 @@
     <style>
         body {
             color: darkred;
-            font-family: mr_CountryhouseG, sans-serif;
+            font-family: Alkalami, sans-serif;
         }
 
         h1 {
