--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     <title>Главная страница</title>
     <style>
         body {
-            font-family: mr_CountryhouseG, sans-serif;
+            font-family: Alkalami, sans-serif;
             text-align: center;
         }
 
