--- a/Web/Views/Account/AfterRegister.cshtml
+++ b/Web/Views/Account/AfterRegister.cshtml
@@ -66,20 +66,26 @@
     </style>
 </head>
 <body>
+    @{
+        var urlJson = System.IO.File.ReadAllText("url.json");
+        var url = Newtonsoft.Json.JsonConvert.DeserializeObject<dynamic>(urlJson);
+        var firstUrl = url.url[1];
+    }
+
     <video autoplay loop muted id="bgvid">
-        <source src="https://joy1.videvo.net/videvo_files/video/free/2022-01/large_watermarked/220114_01_Drone_4k_017_preview.mp4" type="video/mp4">
+        <source src="@firstUrl" type="video/mp4">
     </video>
     <div class="text-container">
-      <div class="text-background">
-        <h1>Спасибо за регистрацию!</h1>
-        <p>Вы успешно зарегистрировались на нашем сайте.</p>
-      </div>
-      <div class="button-container">
-          <a href="https://www.chiquita.com" class="button">Бананы</a>
-          <a href="http://fishencyclopedia.info/" class="button">Рыбы</a>
-          <a href="https://www.lionalert.org" class="button">Львы</a>
-          <a href="https://www.burpee.com/flowers/" class="button">Цветы</a>
-      </div>
+        <div class="text-background">
+            <h1>Спасибо за регистрацию!</h1>
+            <p>Вы успешно зарегистрировались на нашем сайте.</p>
+        </div>
+        <div class="button-container">
+            <a href="https://www.chiquita.com" class="button">Бананы</a>
+            <a href="http://fishencyclopedia.info/" class="button">Рыбы</a>
+            <a href="https://www.lionalert.org" class="button">Львы</a>
+            <a href="https://www.burpee.com/flowers/" class="button">Цветы</a>
+        </div>
     </div>
 </body>
 </html>
