--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -44,9 +44,16 @@
     </style>
 </head>
 <body>
+    @{
+        var urlJson = System.IO.File.ReadAllText("url.json");
+        var url = Newtonsoft.Json.JsonConvert.DeserializeObject<dynamic>(urlJson);
+        var firstUrl = url.url[0];
+    }
+
     <video autoplay loop muted id="bgvid">
-        <source src="https://joy1.videvo.net/videvo_files/video/free/2019-11/large_watermarked/190301_1_25_11_preview.mp4" type="video/mp4">
+        <source src="@firstUrl" type="video/mp4">
     </video>
+
     <div class="welcome-text">
         <h1>Добро пожаловать !</h1>
     </div>
